[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/ui/gem_btn.png" type="Texture" id=1]
[ext_resource path="res://assets/images/ui/gem_btn_pressed.png" type="Texture" id=2]
[ext_resource path="res://src/core/GemShop.gd" type="Script" id=3]
[ext_resource path="res://assets/images/ui/back.png" type="Texture" id=4]
[ext_resource path="res://src/core/BaseControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/ui/donor.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/info.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/info_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/coffee.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/gem_tiny.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/coffee_pressed.png" type="Texture" id=11]

[node name="GemShop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="ColorRect" parent="BG"]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/Banner"]
anchor_right = 1.0
margin_left = -1.0
margin_top = -3.0
margin_right = -1.0
margin_bottom = 11.0
text = "Gem Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BG"]
margin_left = 61.0
margin_top = 177.0
margin_right = 106.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemQty" type="Label" parent="BG"]
margin_left = 57.0
margin_top = 176.0
margin_right = 108.0
margin_bottom = 190.0
text = "25"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem7" type="Sprite" parent="BG/GemQty"]
position = Vector2( 7, 5 )
texture = ExtResource( 10 )
centered = false

[node name="Desc" type="Label" parent="BG"]
anchor_right = 1.0
margin_left = 1.0
margin_top = 8.0
margin_right = 1.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.6, 0.584314, 0.521569, 1 )
custom_constants/line_spacing = 1
text = "In-app purchases are not necessary and only serve to help speed things up or reward the developer of the game! Thank you!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gems" type="Control" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.62939e-06
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="BG/Gems"]
position = Vector2( 74, 57 )
texture = ExtResource( 10 )
centered = false

[node name="Gem2" type="Sprite" parent="BG/Gems"]
position = Vector2( 46, 57 )
texture = ExtResource( 10 )
centered = false

[node name="Gem3" type="Sprite" parent="BG/Gems"]
position = Vector2( 39, 74 )
texture = ExtResource( 10 )
centered = false

[node name="Gem4" type="Sprite" parent="BG/Gems"]
position = Vector2( 39, 91 )
texture = ExtResource( 10 )
centered = false

[node name="Gem5" type="Sprite" parent="BG/Gems"]
position = Vector2( 39, 108 )
texture = ExtResource( 10 )
centered = false

[node name="Gem6" type="Sprite" parent="BG/Gems"]
position = Vector2( 47, 125 )
texture = ExtResource( 10 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
margin_left = 5.0
margin_top = 50.0
margin_right = 103.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="BG/VBoxContainer"]
margin_right = 98.0
margin_bottom = 13.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/VBoxContainer/Button"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/VBoxContainer/Button"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Cup of Coffee"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/VBoxContainer/Button"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "Find 2x   +800"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/VBoxContainer/Button"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "5.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/VBoxContainer/Button"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Control" parent="BG/VBoxContainer"]
margin_top = 17.0
margin_right = 98.0
margin_bottom = 30.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/VBoxContainer/Button2"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/VBoxContainer/Button2"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Gem Stash"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/VBoxContainer/Button2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "+100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/VBoxContainer/Button2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "0.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/VBoxContainer/Button2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Control" parent="BG/VBoxContainer"]
margin_top = 34.0
margin_right = 98.0
margin_bottom = 47.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/VBoxContainer/Button3"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/VBoxContainer/Button3"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Gem Box"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/VBoxContainer/Button3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "+240"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/VBoxContainer/Button3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "1.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/VBoxContainer/Button3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Control" parent="BG/VBoxContainer"]
margin_top = 51.0
margin_right = 98.0
margin_bottom = 64.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/VBoxContainer/Button4"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/VBoxContainer/Button4"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Gem Chest"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/VBoxContainer/Button4"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "+700"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/VBoxContainer/Button4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "4.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/VBoxContainer/Button4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Control" parent="BG/VBoxContainer"]
margin_top = 68.0
margin_right = 98.0
margin_bottom = 81.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/VBoxContainer/Button5"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/VBoxContainer/Button5"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Gem Hoard"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/VBoxContainer/Button5"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "+1,600"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/VBoxContainer/Button5"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "9.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/VBoxContainer/Button5"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="BG"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -47.0
margin_right = -2.0
margin_bottom = -34.0
text = "Item Bundles"
icon = ExtResource( 6 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Donor" type="Button" parent="BG"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -32.0
margin_right = -2.0
margin_bottom = -19.0
text = "Donor Bundles"
icon = ExtResource( 6 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseShop" type="Button" parent="BG"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -15.0
margin_right = 37.0
margin_bottom = -2.0
text = "Close"
icon = ExtResource( 4 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DonorBundles" parent="BG" instance=ExtResource( 5 )]
visible = false

[node name="Banner" type="ColorRect" parent="BG/DonorBundles"]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/DonorBundles/Banner"]
anchor_right = 1.0
margin_left = -1.0
margin_top = -3.0
margin_right = -1.0
margin_bottom = 11.0
text = "Donor Bundles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/DonorBundles"]
anchor_right = 1.0
margin_left = -2.0
margin_top = 8.0
margin_right = 4.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.6, 0.584314, 0.521569, 1 )
custom_constants/line_spacing = 1
text = "If you are really enjoying the game and want to help development, consider a Donor Bundle! All Donor Bundle items can be found during normal gameplay. Tap the ? for more info."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BG/DonorBundles"]
margin_left = 5.0
margin_top = 67.0
margin_right = 103.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="BG/DonorBundles/VBoxContainer"]
margin_right = 98.0
margin_bottom = 13.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/DonorBundles/VBoxContainer/Button"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="TextureButton" parent="BG/DonorBundles/VBoxContainer/Button"]
margin_left = 63.0
margin_right = 76.0
margin_bottom = 13.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/DonorBundles/VBoxContainer/Button"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Multi-Pack"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/DonorBundles/VBoxContainer/Button"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "Fighter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/DonorBundles/VBoxContainer/Button"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "19.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/DonorBundles/VBoxContainer/Button"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Control" parent="BG/DonorBundles/VBoxContainer"]
margin_top = 17.0
margin_right = 98.0
margin_bottom = 30.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/DonorBundles/VBoxContainer/Button2"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/DonorBundles/VBoxContainer/Button2"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Thief"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/DonorBundles/VBoxContainer/Button2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "Thief"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/DonorBundles/VBoxContainer/Button2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "19.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/DonorBundles/VBoxContainer/Button2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Control" parent="BG/DonorBundles/VBoxContainer"]
margin_top = 34.0
margin_right = 98.0
margin_bottom = 47.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/DonorBundles/VBoxContainer/Button3"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/DonorBundles/VBoxContainer/Button3"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Sorcerer"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/DonorBundles/VBoxContainer/Button3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "Sorcerer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/DonorBundles/VBoxContainer/Button3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "19.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/DonorBundles/VBoxContainer/Button3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Control" parent="BG/DonorBundles/VBoxContainer"]
margin_top = 51.0
margin_right = 98.0
margin_bottom = 64.0
rect_min_size = Vector2( 98, 13 )

[node name="Button" type="TextureButton" parent="BG/DonorBundles/VBoxContainer/Button4"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/DonorBundles/VBoxContainer/Button4"]
margin_left = 10.0
margin_top = -4.0
margin_right = 98.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.447059, 0.435294, 0.419608, 0.701961 )
text = "Priestess"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG/DonorBundles/VBoxContainer/Button4"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -11.0
margin_right = 99.0
margin_bottom = 3.0
text = "Priestess"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="BG/DonorBundles/VBoxContainer/Button4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_top = -4.0
margin_right = 4.99999
margin_bottom = 10.0
text = "19.99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="BG/DonorBundles/VBoxContainer/Button4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -11.0
margin_right = 4.99998
margin_bottom = 3.0
text = "USD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DonorBack" type="Button" parent="BG/DonorBundles"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -15.0
margin_right = 37.0
margin_bottom = -2.0
text = "Back"
icon = ExtResource( 4 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="ColorRect" parent="BG/DonorBundles"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.882353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/DonorBundles/Popup"]
anchor_right = 1.0
margin_right = 2.0
margin_bottom = 44.0
text = "The Fighter Bundle includes:
* 1,000 Gems
* All Fighter actions
* All Fighter trinkets
* All Fighter bonuses"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="BG/Donor" to="." method="_on_Donor_pressed"]
[connection signal="pressed" from="BG/CloseShop" to="." method="_on_CloseShop_pressed"]
[connection signal="pressed" from="BG/DonorBundles/DonorBack" to="." method="_on_DonorBack_pressed"]
